--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "surge": "mv ./build/index.html ./build/200.html && surge -p ./build -d notes-keeper.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
