--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "draft-js": "^0.11.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-draft-wysiwyg": "^1.14.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
