--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "surge": "mv ./build/index.html ./build/200.html && surge -p ./build -d notes-keeper.surge.sh"
+    "presurge": "mv ./build/index.html ./build/200.html",
+    "surge": "surge -p ./build -d notes-keeper.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
